welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^ColumnByColumn:8: warning: enclosing method positionFinale has result type Unit: return value discarded
    return true
    ^ColumnByColumn:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^ColumnByColumn:10: warning: enclosing method positionFinale has result type Unit: return value discarded
  return false
  ^ColumnByColumn:14: error: value unary_! is not a member of Unit
  while(!positionFinale){
        ^ColumnByColumn:17: error: not found: value n
      ecritMessage(n)
                   ^ColumnByColumn:18: error: not found: value n
      n=n+1
      ^ColumnByColumn:21: error: not found: value n
      ecritMessage(n)
                   ^ColumnByColumn:22: error: not found: value n
      n=n+1
      ^